--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
     margin: 0;
-    padding: 20px;
+    padding: 50px 50px;
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
     color: #333;
 }
+
+.divider {display: block; clear: both; margin: 20px;}
 
 /* Spinner CSS */
 .loader {
@@ -77,4 +79,23 @@ h1 {
     font-size: 18px;
     color: #333;
     text-align: center;
+}
+
+.response-text, .play-button {display: inline-block;}
+
+.play-button {
+    background-color: transparent; /* Transparent background */
+    border: none; /* No border */
+    cursor: pointer; /* Pointer cursor */
+    font-size: 24px; /* Increase font size for the icon */
+    color: #007BFF; /* Change the icon color */
+    transition: color 0.3s; /* Smooth transition for color */
+}
+
+.play-button:hover {
+    color: #0056b3; /* Change color on hover */
+}
+
+.play-button:focus {
+    outline: none; /* Remove focus outline */
 }
